<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_filters</name>
  <version>0.0.0</version>
  <description>PCL plugins for point_cloud_filters</description>
  <maintainer email="david@metrorobots.com">David V. Lu!!</maintainer>
  <license>BSD 3-clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>filters</depend>
  <depend>pcl_conversions</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>point_cloud_filters</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
