<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>three_d_laser_pc_filter</name>
  <version>0.0.0</version>
  <description>Point cloud filters for 3D lidars</description>
  <maintainer email="david@metrorobots.com">David V. Lu!!</maintainer>
  <license>BSD 3-clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>filters</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>point_cloud_filters</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
